2013-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: Update RPM spec file to add
	libwebp-devel as a build dependency, and libwebp as a run-time
	depdendency.

2013-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c: Incorporated simple WebP support as contributed
	by "TIMEBUG" at users.sf.net plus a few security changes. Does not
	yet support Windows Visual Studio build, input from a pipe,
	attached profiles, animation, or incremental pixel I/O.
	(RegisterWEBPImage): Register WebP as requiring seekable stream so
	input from pipe works.

2013-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawing_wand.c (DrawSetStrokeDashArray): Use array size
	specified by user and don't expect user-provided array to be
	terminated by 0.0.  Resolves SourceForge bug "#250 Unexpected
	results from DrawSetStrokeDashArray".

	* magick/draw.c (DrawSetStrokeDashArray): Use array size specified
	by user and don't expect user-provided array to be terminated by
	0.0.

	* wand/drawing_wand.c (DrawGetStrokeDashArray): terminating 0.0 to
	array returned to user.

	* magick/draw.c (DrawGetStrokeDashArray): Add terminating 0.0 to
	array returned to user.

2013-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c (RenderFreetype): Support rendering UTF-8
	21-bit code points.  Was limited to 16-bit code points due to an
	oversight/bug.  Resolves SourceForge bug "#149 Rendering UTF-8
	encoded file displays wrong glyphs".

2013-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Consistently initialize Image
	page width and height to image width and height. Resolves
	SourceForge bug #253 convert pdf output page is the wrong size
	with -geometry "100%".

2013-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): TIFFDefaultStripSize() sometimes
	returns zero so make sure that rows-per-strip is at least one to